add img to myfile

--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@
   height: 30px;
   text-align: center;
   border-radius: 50%;
-  border: 1px solid crimson;
+  border: 1px solid #eee;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
